# DeepDossier

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
src/agent/: agents.py  config.py  graph.py  memory.py  nodes.py  phase2_sanity.py  prompts.py  runner.py  sanity.py  schemas.py  state.py  subgraph.py  tools.py
tests/: test_memory.py  test_schemas.py  test_subgraph.py
