[project]
name = "deep-dossier"
version = "0.1.0"
description = "Multi-agent research pipeline with LangGraph + Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    # LangGraph ecosystem
    "langgraph>=0.3",
    "langchain-google-genai>=4.2",
    "langchain-community>=0.3",
    # Vector memory
    "chromadb>=0.6",
    # API layer
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "sse-starlette>=2.1",
    "slowapi>=0.1",
    # Research tools
    "tavily-python>=0.7",
    "wikipedia>=1.4",
    "arxiv>=2.1",
    # Observability
    "structlog>=24.1",
    "langsmith>=0.3",
    # Config & validation
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "google-generativeai>=0.8.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic-ai-slim[google,logfire,openai]>=0.1",
    "instructor>=1.15.1",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "httpx>=0.28",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as requiring real API keys",
]
